# zillow-house-price-prediction

./: README.md  pyproject.toml
data/: data_20240603.csv  data_20240604.csv
notebook/: notebook_data_crawling.ipynb  notebook_data_modelling.ipynb
