[tool.poetry]
name = "zillow-house-price-prediction"
version = "0.1.0"
description = ""
authors = ["Harry Maringan Tua <harmaringantua@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
bs4 = "^0.0.2"
requests = "^2.32.3"
streamlit = "^1.35.0"
python-dotenv = "^1.0.1"
kaleido = "0.2.1"
pycaret = "^3.3.2"

[tool.poetry.dev-dependencies]
pandas = "2.1.0"
ipykernel = "^6.29.4"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
